root vers sign in

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,18 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="container py-5">
+  <div class="row justify-content-center">
+    <div class="col-md-8 text-center">
+
+      <!-- Titre principal -->
+      <h1 class="display-4 fw-bold mb-4">
+        Bienvenue sur <span class="text-primary">Deva</span>
+      </h1>
+
+      <!-- Proposition de valeur -->
+      <p class="lead mb-4">
+        La plateforme qui simplifie vos révisions<br>
+        Générez des exercices, testez vos connaissances.
+      </p>
+
+    </div>
+  </div>
+</div>
