--- a/app/views/programs/show.html.erb
+++ b/app/views/programs/show.html.erb
@@ -1,9 +1,16 @@
-<h1><%= @program.title %></h1>
+<div class="container">
 
-<p><strong>Difficulty:</strong> <%= @program.difficulty %></p>
-<p><strong>Language:</strong> <%= @program.language %></p>
-<p><strong>Completion:</strong> <%= @program.completion_percentage %>%</p>
-<p><strong>Time Constraint:</strong> <%= @program.time_constraint %></p>
+<h1><%= @program.title %></h1>
+  <p><strong>Difficulty:</strong> <%= @program.difficulty %></p>
+  <p><strong>Language:</strong> <%= @program.language %></p>
+  <p><strong>Completion:</strong> <%= @program.completion_percentage %>%</p>
+  <p><strong>Time Constraint:</strong> <%= @program.time_constraint %></p>
+  <div class="exercises-container">
+    <% @program.exercices.each do |exercise| %>
+    <p><%= exercise.title %></p>
+    <%= link_to "->", program_exercise_path%>
+  </div>
+</div>
 
 <%= link_to "Edit", edit_program_path(@program) %> |
 <%= link_to "Back to Programs", programs_path %>
