fill all controller of chat and message

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,6 +13,10 @@
         Générez des exercices, testez vos connaissances.
       </p>
 
+      <% if user_signed_in? %>
+        <%= link_to "Start", new_chat_path, class: " btn btn-primary"  %>
+      <% end %>
+
     </div>
   </div>
 </div>
