added style to the whole site

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,3 +10,7 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+@import "components/theme_toggle";
+@import "components/footer";
+@import "components/logo";
+@import "components/animated_deva"
