--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,9 +3,20 @@
     <div class="col-md-8 text-center">
 
       <!-- Titre principal -->
+    <div class="animated-heading theme-light">
       <h1 class="display-4 fw-bold mb-4">
-        Bienvenue sur <span class="text-primary">Deva</span>
+        Bienvenue sur Dev
+        <span class="animated-letter">
+          <span>A</span>
+          <span class="ruby"> Ruby </span>
+          <span class="python">Python</span>
+          <span class="css">CSS</span>
+          <span class="js">JavaScript</span>
+          <span clas="html">HTML</span>
+        </span>
       </h1>
+    </div>
+
 
       <!-- Proposition de valeur -->
       <p class="lead mb-4">
