--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,4 +13,5 @@
 @import "components/theme_toggle";
 @import "components/footer";
 @import "components/logo";
-@import "components/animated_deva"
+@import "components/animated_deva";
+@import "components/message_chat";
