--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,14 +5,16 @@
       <!-- Titre principal -->
     <div class="animated-heading theme-light">
       <h1 class="display-4 fw-bold mb-4">
-        Bienvenue sur Dev
+          <span>Bienvenue</span>
+          <span class="ms-2">sur</span>
+          <span class="ms-2">Dev</span>
         <span class="animated-letter">
           <span>A</span>
           <span class="ruby"> Ruby </span>
           <span class="python">Python</span>
           <span class="css">CSS</span>
           <span class="js">JavaScript</span>
-          <span clas="html">HTML</span>
+          <span class="html">HTML</span>
         </span>
       </h1>
     </div>
