--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -19,7 +19,7 @@
             <%= link_to "Home", root_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Messages", chats_path, class: "nav-link" %>
+            <%= link_to "Chats", chats_path, class: "nav-link" %>
           </li>
         <% end %>
       </ul>
