modification style boutons login et commencer

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -49,7 +49,7 @@
           </div>
         </div>
       <% else %>
-        <%= link_to "Login", new_user_session_path, class: "btn btn-primary" %>
+        <%= link_to "Login", new_user_session_path,  id: "theme-toggle", class: "theme-toggle" %>
       <% end %>
     </div>
   </div>
