--- a/app/assets/stylesheets/components/_theme_toggle.scss
+++ b/app/assets/stylesheets/components/_theme_toggle.scss
@@ -123,6 +123,7 @@ body.theme-light {
   margin-right: 8px;
 }
 
+/* Thème sombre */
 body.theme-dark {
   background-color: #121212;
   background-image: url("data:image/svg+xml,%3Csvg width='40' height='40' viewBox='0 0 40 40' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='20' cy='20' r='1' fill='%23666'/%3E%3C/svg%3E");
