--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -26,7 +26,7 @@
       </p>
 
       <% if user_signed_in? %>
-        <%= button_to "Commencer", chats_path ,method: :post, class: " btn btn-primary"  %>
+        <%= button_to "Commencer", chats_path ,method: :post, class: "theme-toggle", id: "theme-toggle"  %>
       <% end %>
 
     </div>
