--- a/app/assets/stylesheets/components/_theme_toggle.scss
+++ b/app/assets/stylesheets/components/_theme_toggle.scss
@@ -86,6 +86,10 @@ body.theme-light {
   color: #f1f1f1;
 }
 
+.theme-dark a {
+  color: #212529;
+}
+
 .theme-dark .btn-primary {
   background-color: #0d6efd;
   border-color: #0d6efd;
