--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -10,7 +10,7 @@
     <% @chat.messages.each do |message| %>
       <% if message.role == "user" %>
         <div class=" container col6 d-flex justify-content-end">
-          <p class=" my-3 py-2 px-5 bg-success rounded-pill"><%= message.content %></p>
+          <p class=" my-3 py-2 px-5 bg-success rounded"><%= message.content %></p>
         </div>
       <% else %>
         <div class="container col6 d-flex justify-content-start text-dark messageIA ">
