modification de style signup

--- a/app/assets/stylesheets/components/_theme_toggle.scss
+++ b/app/assets/stylesheets/components/_theme_toggle.scss
@@ -161,6 +161,10 @@ body.theme-dark {
   border-color: #555;
 }
 
+.theme-dark .theme-toggle .btn {
+  color: #fff;
+}
+
 .theme-dark .theme-toggle:hover {
   background-color: #3d3d3d;
 }
