add button after last chat

--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -26,6 +26,9 @@
         <% end %>
       </div>
     <% end %>
+    <% if @chat.messages.where(role: "assistant").count == 3 %>
+      <%= link_to "Commencer la révision", root_path, class: "btn btn-success w-100" %>
+    <% end %>
 
   </div>
 </div>
