--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -32,6 +32,7 @@
   #theme-toggle {
     border-color: #6c757d;
     color: #212529;
+    text-decoration: none;
   }
 
 }
@@ -52,6 +53,7 @@
   #theme-toggle {
     border-color: #bbb;
     color: #fff;
+    text-decoration: none;
   }
 
   .avatar {
