--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -4,7 +4,7 @@
     <h2 class="mt-2 mb-3"><%= @chat.title %></h2>
   </div>
 
-  <div class="overflow-auto col-8 border border-light rounded py-3 mb-3" style="height : 60vh">
+  <div class="overflow-auto col-8 border bg-opacity-10 bg-light border-light rounded py-3 mb-3" style="height : 60vh">
     <div class="container col6 d-flex justify-content-start">
           <p class=" w-auto py-2 px-5 bg-warning text-dark rounded">Selectionnez le langage que vous voulez apprendre ?</p>
     </div>
