Passage des textes en français

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -20,7 +20,7 @@
   </div>
 
   <div class="theme-toggle text-center" id="theme-toggle" >
-    <%= f.button :submit, "Create my account" %>
+    <%= f.button :submit, "Créer mon compte" %>
   </div>
 <% end %>
 </div>
