--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -25,8 +25,10 @@
     <% if @chat.messages.where(role: "assistant").count < 3 %>
       <div id="new_message_container">
         <%= simple_form_for [@chat, @message] do |f| %>
-          <%= f.input :content, label: false, required: true, placeholder: "Ecris ici ...", input_html: { id: "chat_input", class: "form-control w-75" } %>
-          <%= f.button :submit, 'Envoyer', class: 'btn btn-primary' %>
+          <div class="d-flex">
+            <%= f.input_field :content, placeholder: "Ecris ici ...",id: "chat_input", class: "form-control w-75 me-2" %>
+            <%= f.button :submit, 'Envoyer', class: 'btn btn-primary h-100' %>
+          </div>
         <% end %>
       </div>
     <% end %>
