--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -43,7 +43,7 @@
             <%= image_tag "avatar.svg", class: "avatar" %>
           </a>
           <div class="dropdown-menu dropdown-menu-end">
-            <%= link_to "Profil", "#", class: "dropdown-item" %>
+            <%= link_to "Profil", programs_path, class: "dropdown-item" %>
             <%= link_to "Paramètres", "#", class: "dropdown-item" %>
             <%= link_to "Se déconnecter", destroy_user_session_path, data: { turbo_method: :delete }, class: "dropdown-item" %>
           </div>
