bouton supprimer chat

--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -2,6 +2,10 @@
 <div class="container">
   <div class="col-8">
     <h2 class="mt-2 mb-3"><%= @chat.title %></h2>
+      <% if @chat.messages.any? %>
+      <%= button_to "Supprimer", chat_path(@chat), method: :delete, data: { turbo_confirm: "Êtes-vous sûr de vouloir supprimer ce chat ?" }, class: "btn btn-danger h-100" %>
+      <% end %>
+</div>
   </div>
 
   <div id="messages_container" class="overflow-auto col-8 border border-light rounded py-3 mb-3" style="height : 60vh">
