--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,4 +15,5 @@
 @import "components/logo";
 @import "components/animated_deva";
 @import "components/message_chat";
-@import "pages/session_new"
+@import "pages/session_new";
+@import "pages/program_show"
