--- a/app/views/programs/show.html.erb
+++ b/app/views/programs/show.html.erb
@@ -1,13 +1,30 @@
 <div class="container">
+  <h1 class="program-show-title"><%= @program.title %></h1>
 
-<h1><%= @program.title %></h1>
-  <p><strong>Difficulty:</strong> <%= @program.difficulty %></p>
-  <p><strong>Language:</strong> <%= @program.language %></p>
-  <p><strong>Completion:</strong> <%= @program.completion_percentage %>%</p>
-  <p><strong>Time Constraint:</strong> <%= @program.time_constraint %></p>
+
   <div class="exercises-container">
+    <div class="program-info">
+      <p><strong>Ton niveau :</strong> <%= @program.difficulty %></p>
+      <p><strong>Langage souhaité :</strong> <%= @program.language %></p>
+      <p><strong>Complété :</strong> <%= @program.completion_percentage %>%</p>
+      <p><strong>Temps souhaité :</strong> <%= @program.time_constraint %></p>
+    </div>
+    <p><strong>Exercices :</strong></p>
+      <div class="card">
+        <% @program.exercises.each do |exercise| %>
+          <%= link_to program_exercise_path(@program, exercise) do %>
+            <p><strong><%= exercise.title %></strong></p>
+          <% end %>
+            <p><strong><%= exercise.finished %></strong></p>
+            <p><strong><%= exercise.content %></strong></p>
+        <% end %>
+      </div>
+  </div>
+
+  <div class="actions">
+    <%= link_to "Supprimer", program_path(@program),
+                data: {turbo_method: :delete, turbo_confirm: "Êtes-vous sûr ?" },
+                class: "btn-delete" %>
+    <%= link_to "Retour aux programmes", programs_path, class: "btn-back" %>
   </div>
 </div>
-
-<%= link_to "Edit", edit_program_path(@program) %> |
-<%= link_to "Back to Programs", programs_path %>
