--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -16,7 +16,7 @@
       <ul class="navbar-nav me-auto ms-3">
         <% if user_signed_in? %>
           <li class="nav-item">
-            <%= link_to "Acceuil", root_path, class: "nav-link" %>
+            <%= link_to "Accueil", root_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
             <%= link_to "Programmes", programs_path, class: "nav-link" %>
