--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,44 +1,44 @@
-
-<div class="container">
+<div class="container" data-controller="chat">
   <div class="col-8">
     <h2 class="mt-2 mb-3"><%= @chat.title %></h2>
-      <% if @chat.messages.any? %>
+    <% if @chat.messages.any? %>
       <%= button_to "Supprimer", chat_path(@chat), method: :delete, data: { turbo_confirm: "Êtes-vous sûr de vouloir supprimer ce chat ?" }, class: "btn btn-danger h-100" %>
-      <% end %>
-</div>
+    <% end %>
   </div>
 
-  <div id="messages_container" class="overflow-auto col-8 border border-light rounded py-3 mb-3" style="height : 60vh">
+  <div id="messages_container"
+       data-chat-target="messages" class="overflow-auto col-8 border border-light rounded py-3 mb-3" style="height: 60vh">
     <div class="container col6 d-flex justify-content-start">
-          <p class=" w-auto py-2 px-5 bg-warning text-dark rounded">Selectionnez le langage que vous voulez apprendre ?</p>
+      <p class="w-auto py-2 px-5 bg-warning text-dark rounded">Selectionnez le langage que vous voulez apprendre ?</p>
     </div>
 
     <% @chat.messages.each do |message| %>
       <% if message.role == "user" %>
-        <div class=" container col6 d-flex justify-content-end">
-          <p class=" my-3 py-2 px-5 bg-success rounded"><%= message.content %></p>
+        <div class="container col6 d-flex justify-content-end">
+          <p class="my-3 py-2 px-5 bg-success rounded"><%= message.content %></p>
         </div>
       <% else %>
-        <div class="container col6 d-flex justify-content-start text-dark messageIA ">
-          <span class="mb-3 py-2 px-5 bg-warning text-dark rounded"><%= raw(render_markdown(message.content))%></span>
+        <div class="container col6 d-flex justify-content-start text-dark messageIA">
+          <span class="mb-3 py-2 px-5 bg-warning text-dark rounded"><%= raw(render_markdown(message.content)) %></span>
         </div>
       <% end %>
     <% end %>
   </div>
-  <div class="col-8">
+
+  <div class="col-8" data-chat-target="form">
     <% if @chat.messages.where(role: "assistant").count < 3 %>
       <div id="new_message_container">
         <%= simple_form_for [@chat, @message] do |f| %>
           <div class="d-flex">
-            <%= f.input_field :content, placeholder: "Ecris ici ...",id: "chat_input", class: "form-control w-75 me-2" %>
+            <%= f.input_field :content, placeholder: "Ecris ici ...", id: "chat_input", data: { chat_target: "input" }, class: "form-control w-75 me-2" %>
             <%= f.button :submit, 'Envoyer', class: 'btn btn-primary h-100' %>
           </div>
         <% end %>
       </div>
     <% end %>
+
     <% if @chat.messages.where(role: "assistant").count == 3 %>
-      <%= button_to "Commencer la révision", programs_path(@chat), method: :post,class: "btn btn-success w-100 text-white" %>
+      <%= button_to "Commencer la révision", programs_path(@chat), method: :post, class: "btn btn-success w-100 text-white" %>
     <% end %>
   </div>
-
 </div>
