--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2>Modifier <%= @user.first_name %></h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= f.error_notification %>
@@ -9,27 +9,36 @@
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>En attente de confirmation pour : <%= resource.unconfirmed_email %></p>
     <% end %>
-
+    <%= f.input :first_name,
+                label: "Prénom",
+                required: false,
+                input_html: { autocomplete: "first_name" } %>
+    <%= f.input :last_name,
+                label: "Nom",
+                required: false,
+                input_html: { autocomplete: "last_name" } %>
     <%= f.input :password,
+                label: "Mot de passe",
                 hint: "Laissez vide si vous ne voulez pas changer",
                 required: false,
                 input_html: { autocomplete: "new-password" } %>
     <%= f.input :password_confirmation,
+                label: "Confirmer mot de passe",
                 required: false,
                 input_html: { autocomplete: "new-password" } %>
     <%= f.input :current_password,
-                hint: "Mot de passe actuel",
+                label: "Mot de passe actuel",
                 required: true,
                 input_html: { autocomplete: "current-password" } %>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Update" %>
+    <%= f.button :submit, "Mettre à jour", class: "btn btn-primary" %>
   </div>
 <% end %>
-
+<br>
 <h3>Supprimer mon compte</h3>
-
-<div>Mécontent ? <%= button_to "Supprimer mon compte", registration_path(resource_name), data: { confirm: "Êtes-vous certain ?", turbo_confirm: "Êtes-vous certain ?" }, method: :delete %></div>
-
-<%= link_to "Retour", :back %>
+<br>
+<div>Je ne souhaite pas garder mon compte ? <%= button_to "Supprimer mon compte", registration_path(resource_name), class: "btn btn-danger" , data: { confirm: "Êtes-vous certain ?", turbo_confirm: "Êtes-vous certain ?" }, method: :delete %></div>
+<br>
+<%= link_to "Retour", :back, class: "btn"%>
