--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,4 +16,5 @@
 @import "components/animated_deva";
 @import "components/message_chat";
 @import "pages/session_new";
-@import "pages/program_show"
+@import "pages/session_edit";
+@import "pages/program_show";
