--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -44,7 +44,7 @@
           </a>
           <div class="dropdown-menu dropdown-menu-end">
             <%= link_to "Profil", edit_user_registration_path, class: "dropdown-item" %>
-            <%= link_to "Paramètres", profile_path, class: "dropdown-item" %>
+            <%= link_to "Tableau de bord", profile_path, class: "dropdown-item" %>
             <%= link_to "Se déconnecter", destroy_user_session_path, data: { turbo_method: :delete }, class: "dropdown-item" %>
           </div>
         </div>
