--- a/app/assets/stylesheets/components/_theme_toggle.scss
+++ b/app/assets/stylesheets/components/_theme_toggle.scss
@@ -34,6 +34,10 @@ body.theme-light {
   color: #212529;
 }
 
+.theme-light .chatuser {
+  color:#fff;
+}
+
 .theme-light .btn-primary {
   background-color: #0d6efd;
   border-color: #0d6efd;
@@ -53,6 +57,10 @@ body.theme-light {
   color: #212529;
   border: 1px solid #ddd;
   transition: background-color 0.8s ease, color 0.8s ease, border-color 0.8s ease;
+}
+
+.theme-light #messages_container {
+  background-color: #fff;
 }
 
 /* ===========================
@@ -93,6 +101,10 @@ body.theme-light {
   color: #fff;
 }
 
+// .theme-dark .chatuser p {
+//   color: red;
+// }
+
 .theme-dark .btn-primary {
   background-color: #0d6efd;
   border-color: #0d6efd;
@@ -121,6 +133,10 @@ body.theme-light {
 
 .theme-dark .card-body {
   color:#fff;
+  background-color: #121212;
+}
+
+.theme-dark #messages_container {
   background-color: #121212;
 }
 
