--- a/app/assets/stylesheets/pages/_chat.scss
+++ b/app/assets/stylesheets/pages/_chat.scss
@@ -10,8 +10,8 @@
 .title-delete-wrapper {
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
-  gap: 16px;
+  align-items: flex-center;
+  margin: 8px, 0, 0, 16px;
 }
 
 .title-delete-wrapper h2 {
@@ -19,8 +19,9 @@
   flex: 1;
 }
 
-.title-delete-wrapper .btn-danger {
+.bin {
   white-space: nowrap;
   padding: 8px 16px;
   font-size: 0.9rem;
+  margin-top: 8px;
 }
