--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,7 +1,7 @@
-<div class="container" data-controller="chat">
+<div class="container row justify-content-center" data-controller="chat">
   <div class="col-8">
     <div class="title-delete-wrapper">
-      <h2 class="mt-2 mb-3"><%= @chat.title %></h2>
+      <h2 class="mt-2 mb-3 text"><%= @chat.title %></h2>
       <% if @chat.messages.any? %>
         <p class = "bin">
         <%= link_to "", chat_path(@chat),
@@ -14,17 +14,17 @@
 
   <div id="messages_container"
        data-chat-target="messages" class="overflow-auto col-8 border rounded py-3 mb-3" style="height: 60vh">
-    <div class="container col6 d-flex justify-content-start">
+    <div class="container d-flex justify-content-start">
       <p class="chatbot w-auto py-2 px-5 text-dark rounded">Selectionnez le langage que vous voulez apprendre ?</p>
     </div>
 
     <% @chat.messages.each do |message| %>
       <% if message.role == "user" %>
-        <div class="container col6 d-flex justify-content-end">
+        <div class="container d-flex justify-content-end">
           <p class="chatuser my-3 py-2 px-5 rounded"><%= message.content %></p>
         </div>
       <% else %>
-        <div class="container col6 d-flex justify-content-start text-dark messageIA">
+        <div class="container d-flex justify-content-start text-dark messageIA">
           <span class="chatbot mb-3 py-2 px-5 text-dark rounded"><%= raw(render_markdown(message.content)) %></span>
         </div>
       <% end %>
